--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,7 @@ repos:
     rev: v1.2.3
     hooks:
       - id: flake8
+      - args: --ignore=E501 
    
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
