--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,10 +13,10 @@ repos:
         stages: [commit]
         
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v1.2.3
+    rev: 1.2.3
     hooks:
       - id: flake8
-      - args: --ignore=E501 
+      - args: --ignore=E501
    
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
