--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,8 +12,9 @@ repos:
       - id: black
         stages: [commit]
 
-  - repo: https://github.com/pycqa/isort
-    rev: 5.12.0
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v3.0.0-alpha.9-for-vscode
     hooks:
-      - id: isort
+      - id: prettier
+        types_or: [markdown, yaml]
         stages: [commit]
